--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "jasmine-es6-spies": "0.0.4",
     "rxjs": "~6.6.0",
     "tailwindcss": "^2.2.16",
     "tslib": "^2.3.0",
