Implement cost counting

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "jasmine-es6-spies": "0.0.4",
+    "luxon": "^3.1.0",
     "rxjs": "~6.6.0",
     "tailwindcss": "^2.2.16",
     "tslib": "^2.3.0",
