--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
     "@angular/material": "^12.2.13",
+    "@angular/material-date-fns-adapter": "^14.2.6",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "dayjs": "^1.11.6",
     "jasmine-es6-spies": "0.0.4",
     "luxon": "^3.1.0",
     "rxjs": "~6.6.0",
